--- a/myLink/package.json
+++ b/myLink/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-clipboard": "~1.0.2",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
