--- a/myLink/package.json
+++ b/myLink/package.json
@@ -17,6 +17,7 @@
     "expo": "~41.0.1",
     "expo-clipboard": "~1.0.2",
     "expo-linear-gradient": "~9.1.0",
+    "expo-local-authentication": "~11.0.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
