--- a/myLink/package.json
+++ b/myLink/package.json
@@ -8,30 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
-    "expo": "~41.0.1",
-    "expo-clipboard": "~1.0.2",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-local-authentication": "~11.0.2",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "11.2.3",
+    "expo": "^49.0.18",
+    "expo-clipboard": "~4.3.1",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-local-authentication": "~13.4.1",
+    "expo-router": "^2.0.12",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
